dark mode fix

--- a/assets/lm-css/mainStyle-lm.css
+++ b/assets/lm-css/mainStyle-lm.css
@@ -7,6 +7,7 @@ body {
 .dark-mode {
     min-height: 800px;
     background-color: rgba(0, 0, 0, 0.815);
+    color: rgb(253, 246, 236);
 }
 
 body div {
